# gtest-example

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  MyTest.cpp  README.md  environment.yml  main.cpp  test.py
.github/workflows/: run_test.yml
